# playground-s6e6

./: .gitignore  README.md  SPRINT_ACTIVE.txt  experiments.jsonl  pyproject.toml
colab/: bootstrap.py
conveyor/: experiment.py  fleet_stack.py  modal_app.py  orchestrator.py
docs/: CONVEYOR.md  FINDINGS.md  LADDER.md  diary.md  strategy.md
docs/versions/: v1.md  v10.md  v11.md  v13.md  v14.md  v15.md  v16.md  v17.md  v2.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  v9.md
notebooks/: 01_eda.py  02_v1_lgb_baseline.py  03_v2_leak_match.py  04_v3_extra_features.py  05_v4_error_diagnostic.py  06_v5_decision_rule.py  07_v6_model_zoo.py  08_v7_nn.py  09_v8_consolidation.py  10_v9_ceiling.py  11_v10_tabicl.py  12_v11_domain.py  13_v13_realmlp.py  14_v14_realmlp_fe.py  15_v15_blend.py  16_v16_catboost_blend.py  17_v17_realmlp_seedbag.py  18_v18_origaug_lgb.py  19_v19_origaug_realmlp.py  20_v20_artifacts_lgb.py  21_v21_tabpfn.py  colab_runner.ipynb
src/: artifacts.py  augment.py  blend.py  config.py  cv.py  dashboard.py  data.py  diagnostics.py  diary.py  domain.py  fe_realmlp.py  features.py  fttransformer.py  leak.py  metrics.py  models.py  observer.py  realmlp.py  stacker.py  viz.py
