[project]
name = "playground-s6e6"
version = "1.0.0"
description = "Kaggle Playground S6E6 — Predicting Stellar Class (multiclass GALAXY/STAR/QSO, SDSS17). Solo-built, no public blends until finals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ilja Grigorjev", email = "grigorjev.ilja@gmail.com" }]
keywords = ["kaggle", "machine-learning", "multiclass", "tabular", "playground-series", "astronomy"]

# Core dependencies — ranges, not exact pins.
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<4.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.3,<2.0",
    "lightgbm>=4.0,<5.0",
    "xgboost>=2.0,<4.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "rich>=13.0",                  # live in-cell dashboard
    "joblib>=1.3",
]

[project.optional-dependencies]
boosting = ["catboost>=1.2,<2.0"]
kaggle = ["kaggle>=1.6"]
all = ["playground-s6e6[boosting,kaggle]"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.6"]

[project.urls]
Repository = "https://github.com/SirGrigor/playground-s6e6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]
